k8s/celery-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
spec:
  replicas: 8
  selector:
    matchLabels:
      component: worker
  template:
    metadata:
      labels:
        component: worker
    spec:
      containers:
        - name: worker
          image: delftdatasystems/schema-matching-engine:latest
          resources:
            limits:
              memory: "3Gi"
              cpu: "1"
            requests:
              memory: "3Gi"
              cpu: "1"
          command: ["celery"]
          args: ["-A", "app.celery", "worker", "-l", "INFO", "--concurrency=1"]
          ports:
            - containerPort: 5000
