k8s/flower-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: flower-service
spec:
  type: NodePort
  selector:
    component: flower
  ports:
    - port: 5555
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flower-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: flower
  template:
    metadata:
      labels:
        component: flower
    spec:
      containers:
        - name: flower
          image: delftdatasystems/schema-matching-engine:latest
          resources:
            limits:
              memory: "1Gi"
              cpu: "500m"
            requests:
              memory: "1Gi"
              cpu: "500m"
          command: ['celery']
          args: ['-A', 'app.celery', 'flower', '--broker_api=http://rabbitmq:rabbitmq@rabbitmq:15672/api/']
          ports:
            - containerPort: 5555
