k8s/server-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: server
  ports:
    - port: 5000
      targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: server
  template:
    metadata:
      labels:
        component: server
    spec:
      containers:
        - name: server
          image: kpsarakis/schema-matching-engine:latest
          resources:
            limits:
              memory: "8Gi"
              cpu: "2"
            requests:
              memory: "8Gi"
              cpu: "2"
          command: ["gunicorn"]
          args: ["-b", "0.0.0.0:5000", "app:app", "-t", "300", "-w", "2", "--threads", "10"]
          ports:
            - containerPort: 5000
